{"filter":false,"title":"configure.ac","tooltip":"/src/nmap/configure.ac","undoManager":{"mark":-1,"position":-1,"stack":[]},"ace":{"folds":[],"scrolltop":12030,"scrollleft":0,"selection":{"start":{"row":845,"column":22},"end":{"row":845,"column":22},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":801,"state":"start","mode":"ace/mode/text"}},"timestamp":1452531475967,"hash":"cbbb301b1ce8012543cd96ddeaa5bc8fb5a167ca"}