{"filter":false,"title":"configure.ac","tooltip":"/src/nmap/nbase/configure.ac","undoManager":{"mark":-1,"position":-1,"stack":[]},"ace":{"folds":[],"scrolltop":2336,"scrollleft":0,"selection":{"start":{"row":188,"column":0},"end":{"row":188,"column":16},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":165,"state":"start","mode":"ace/mode/text"}},"timestamp":1452531317267,"hash":"a5523a49e6a3daf5c5c2630ba54cff74030f0268"}