{"filter":false,"title":"configure.ac","tooltip":"/src/nmap/nsock/src/configure.ac","undoManager":{"mark":-1,"position":-1,"stack":[]},"ace":{"folds":[],"scrolltop":3408,"scrollleft":0,"selection":{"start":{"row":287,"column":21},"end":{"row":287,"column":28},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":0},"timestamp":1458656780290,"hash":"828389dbd8f3387048467aaf36e89a0ea057dd96"}